<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorA"
        tools:context=".InfoActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_16sdp">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_125sdp"
                android:src="@drawable/calmate"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/welcome"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"
                android:textColor="@color/colorD"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorC"
                android:text="@string/text1"
                android:textSize="16sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorC"
                android:text="@string/text2"
                android:textSize="16sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textColor="@color/colorC"
                android:text="@string/text3"
                android:textSize="16sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32sdp"
                android:textColor="@color/colorC"
                android:text="@string/thanks"
                android:textStyle="bold"
                android:textSize="16sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/colorC"
                android:text="@string/by"
                android:textStyle="italic"
                android:textSize="16sp"/>
    </LinearLayout>
</RelativeLayout>