<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorB"
                tools:context=".BangunDatar.JajargenjangFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edit_text2"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_8sdp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jajargenjang"
                android:textStyle="bold"
                android:textSize="@dimen/_32sdp"
                android:textColor="@color/colorD"
                android:gravity="center"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <EditText
                    android:id="@+id/et_frstNumbJ"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edit_text"
                    android:hint="@string/a"
                    android:layout_marginRight="@dimen/_4sdp"/>
            <EditText
                    android:id="@+id/et_scndNumbJ"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edit_text"
                    android:hint="@string/a_or_t"/>
        </LinearLayout>
        <TextView
                android:id="@+id/tv_resultJ"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hasil"
                android:gravity="center"
                android:background="@drawable/edit_text"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp">
            <Button
                    android:id="@+id/btn_luas_jajargenjang"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/btn_result"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:text="@string/luas"/>
            <Button
                    android:id="@+id/btn_keliling_jajargenjang"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/btn_result"
                    android:textColor="@android:color/white"
                    android:text="@string/keliling"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>