<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorB"
                tools:context=".BangunDatar.PersegiFragment">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/edit_text2"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_8sdp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/persegi"
                android:textStyle="bold"
                android:textColor="@color/colorD"
                android:textSize="@dimen/_32sdp"
                android:gravity="center"/>
        <EditText
                android:id="@+id/et_frstNumbP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/edit_text"
                android:hint="@string/sisi"/>
        <TextView
                android:id="@+id/tv_resultP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hasil"
                android:gravity="center"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:background="@drawable/edit_text"
                android:layout_marginTop="@dimen/_4sdp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp">
            <Button
                    android:id="@+id/btn_luas_persegi"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/luas"
                    android:textColor="@android:color/white"
                    android:background="@drawable/btn_result"
                    android:layout_marginRight="@dimen/_4sdp"/>
            <Button
                    android:id="@+id/btn_keliling_persegi"
                    android:layout_width="@dimen/_125sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/keliling"
                    android:textColor="@android:color/white"
                    android:background="@drawable/btn_result"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>