<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@drawable/edit_text2"
              android:padding="@dimen/_10sdp"
              tools:context=".Aritmatic.Aritmatic4Fragment">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
                android:id="@+id/et_frstNumb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:inputType="numberDecimal"/>
        <EditText
                android:id="@+id/et_scndNumb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:inputType="numberDecimal"
                android:layout_marginTop="@dimen/_4sdp"/>
        <EditText
                android:id="@+id/et_thrdNumb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:inputType="numberDecimal"
                android:layout_marginTop="@dimen/_4sdp"/>
        <EditText
                android:id="@+id/et_frthNumb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text"
                android:inputType="numberDecimal"
                android:layout_marginTop="@dimen/_4sdp"/>
    </LinearLayout>
    <TextView
            android:id="@+id/tv_result4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasil"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@drawable/edit_text"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/_4sdp">
        <Button
                android:id="@+id/btn_plus4"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/tambah"
                android:textSize="@dimen/_32sdp"
                android:textColor="@color/colorA"
                android:layout_marginRight="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:background="@drawable/btn_result"/>
        <Button
                android:id="@+id/btn_min4"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/min"
                android:textSize="@dimen/_32sdp"
                android:layout_toRightOf="@+id/btn_plus4"
                android:textColor="@color/colorA"
                android:layout_marginBottom="@dimen/_4sdp"
                android:background="@drawable/btn_result"/>
        <Button
                android:id="@+id/btn_kali4"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/kali"
                android:textSize="@dimen/_22sdp"
                android:layout_below="@+id/btn_plus4"
                android:textColor="@color/colorA"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@drawable/btn_result"/>
        <Button
                android:id="@+id/btn_bagi4"
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/bagi"
                android:textSize="@dimen/_32sdp"
                android:layout_below="@+id/btn_min4"
                android:layout_toRightOf="@+id/btn_kali4"
                android:textColor="@color/colorA"
                android:background="@drawable/btn_result"/>
    </RelativeLayout>


</LinearLayout>